fix: fix navbar menu links not showing on small screens
due to clip path inset, the menu links would not show on smaller screens + rename showMenu state to isMobileMenuOpen for better readability

--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -21,54 +21,50 @@
         align-items: center;
     }
 }
+a {
+    text-decoration: none;
+    font-size: 1.2rem;
+    &:hover {
+        text-decoration: underline;
+    }
+    &.light {
+        color: $text-light;
+    }
+    &.dark {
+        color: $text-dark;
+    }
+}
 .left_side {
     display: flex;
     align-items: center;
     gap: 2em;
 
-    a {
-        text-decoration: none;
-        font-size: 1.2rem;
-        &:hover {
-            text-decoration: underline;
-        }
-        &.light {
-            color: $text-light;
-        }
-        &.dark {
-            color: $text-dark;
-        }
-    }
     .button {
         display: none;
         background-color: transparent;
         border: none;
         cursor: pointer;
     }
-    .links {
+    .desktop_links {
         display: flex;
         align-items: center;
         gap: 2em;
     }
-    .links_mobile {
-        display: none;
-    }
 }
-
+.mobile_links {
+    display: none;
+}
 @media only screen and (max-width: $large-mobile-breakpoint) {
     .left_side {
-        gap: 0.5em;
+        gap: 1em;
         .button {
             display: block;
         }
-        .links {
+        .desktop_links {
             display: none;
         }
     }
-    .links {
-        display: none;
-    }
-    .links.active {
+    .mobile_links {
         position: absolute;
         top: 3em;
         left: 0;
